@@ -48,6 +48,9 @@ Breaking Changes
 
 	redef EventMetadata::add_missing_remote_network_timestamp = T;
 
+- The ``IsPacketSource()`` method on ``IOSource`` was removed. It was unused
+  and incorrectly returned ``false`` on all packet sources.
+
 New Functionality
 -----------------
 
